# chatui

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json
src/: App.tsx  app.rs  config.ts  gemini.rs  git.rs  index.tsx  main.rs  markdown.rs  message_block.rs  models.rs  types.d.ts  ui.rs
src/components/: App.tsx  ChatBubble.tsx  ChatHistory.test.tsx  ChatHistory.tsx  InputBox.tsx  StatusBar.tsx
src/handlers/: keyboardHandlers.ts
src/providers/: llm.ts
src/services/: llm.ts  mockLLM.ts
src/types/: index.ts
