[package]
name = "chatui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.26.1"
crossterm = "0.27.0"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
git2 = "0.18"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
log = "0.4"
