[package]
name = "chatui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.25.0"
crossterm = "0.27.0"
anyhow = "1.0.79"
derive_more = "0.99.17"
unicode-width = "0.1.11"
tui-textarea = "0.4.0"
